--- a/test/integration/fixtures/operators.in
+++ b/test/integration/fixtures/operators.in
@@ -31,3 +31,12 @@ body
   
   // 1
   foo 8 && (4 && 1)
+  
+  // true
+  foo #fff is a Color
+  foo #fff is a color
+  
+  // false
+  foo 15px is a color
+  // true
+  foo 15px is a unit
