more ternary tests

--- a/test/integration/fixtures/operators.in
+++ b/test/integration/fixtures/operators.in
@@ -59,4 +59,8 @@ body
   foo 5 < 10 and 10 > 5
   
   // wahoo
-  foo @bar is defined ? wahoo : nope  
+  foo @bar is defined ? wahoo : nope
+  
+  // nope
+  foo @rawr is defined ? yes : nope
+  
