--- a/test/integration/fixtures/variables.in
+++ b/test/integration/fixtures/variables.in
@@ -1,6 +1,6 @@
 
-@size: 14px
-@font-family: 'Lucida Grande', Arial, sans-serif
+@size = 14px
+@font-family = 'Lucida Grande', Arial, sans-serif
 
 body
   font @size @font-family
