--- a/test/integration/fixtures/scope.complex.in
+++ b/test/integration/fixtures/scope.complex.in
@@ -1,13 +1,13 @@
 
-@size: 12px
-@size-large: @size * 2
+@size = 12px
+@size-large = @size * 2
 
-pad(@x, @y: @size)
+pad(@x, @y = @size)
   margin @size-large
   padding @y @x @y @x
 
 body
-  @size: 50px
+  @size = 50px
   pad(5px)
   font-size @size
 
