More function default tests

--- a/test/integration/fixtures/functions.defaults.in
+++ b/test/integration/fixtures/functions.defaults.in
@@ -1,8 +1,17 @@
 
 @size = 15px
 
+add(@a, @b)
+  @a + @b
+
 pad(@x, @y = @size)
+  padding @y @x @y @x
+
+pad2(@x, @y = @x)
   padding @y @x @y @x
 
 body
   pad(5px)
+
+a.button
+  pad2(10px)
