more comment tests

--- a/test/integration/tests/comments.in
+++ b/test/integration/tests/comments.in
@@ -3,6 +3,11 @@
 
 body
   color red
+  // lots of stuff
+  // wahoo
+
+  // super cool
+ 
   // background green
 
 form
@@ -18,3 +23,4 @@ body
     color blue
 
 */
+// foo
