--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
-{   "name": ""
-  , "description": ""
+{   "name": "stylus"
+  , "description": "Expressive, feature-rich css superset inspired by jade"
   , "version": "0.0.1"
   , "author": "TJ Holowaychuk <tj@vision-media.ca>"
-  , "keywords": []
-  , "main": "./lib/mylib.js"
-  , "engines": { "node": ">= 0.2.0" }
+  , "keywords": ["css", "parser", "style", "stylesheets", "jade", "language"]
+  , "main": "./index.js"
+  , "engines": { "node": ">= 0.2.4" }
   , "dependencies": {
     "cssom": ">= 0.2.0"
   }
