Removed @ prefix from all tests

--- a/test/integration/tests/bifs.lookup.in
+++ b/test/integration/tests/bifs.lookup.in
@@ -1,8 +1,8 @@
 
-@dark-blue = #006269
+dark-blue = #006269
 
-dark(@color-name)
-  lookup('dark-' + @color-name)
+dark(color-name)
+  lookup('dark-' + color-name)
 
 body
   color dark('blue')
