--- a/test/integration/tests/functions.property.in
+++ b/test/integration/tests/functions.property.in
@@ -1,8 +1,8 @@
 
-border-radius(@size)
-  -webkit-border-radius @size
-  -moz-border-radius @size
-  border-radius @size
+border-radius(size)
+  -webkit-border-radius size
+  -moz-border-radius size
+  border-radius size
 
 form
   border-radius 5px
