--- a/test/integration/tests/functions.defaults.in
+++ b/test/integration/tests/functions.defaults.in
@@ -1,18 +1,18 @@
 
-@size = 15px
-@small = 5
+size = 15px
+small = 5
 
-add(@a, @b)
-  @a + @b
+add(a, b)
+  a + b
 
-pad-var(@x, @y = @size)
-  padding @y @x @y @x
+pad-var(x, y = size)
+  padding y x y x
 
-pad-arg(@x, @y = @x)
-  padding @y @x @y @x
+pad-arg(x, y = x)
+  padding y x y x
 
-pad-call(@n = add(@small, @small))
-  padding @n @n @n @n
+pad-call(n = add(small, small))
+  padding n n n n
 
 body
   pad-var(5px)
