--- a/test/integration/tests/functions.variable.ident.in
+++ b/test/integration/tests/functions.variable.ident.in
@@ -1,11 +1,11 @@
 
-add(@a, @b)
-  @a + @b
+add(a, b)
+  a + b
 
-@size-function = add
+size-function = add
 
-size(@n)
-  size-function(@n, @n)
+size(n)
+  size-function(n, n)
 
 body
   font size(14px)
