--- a/test/integration/tests/scope.complex.in
+++ b/test/integration/tests/scope.complex.in
@@ -1,16 +1,16 @@
 
-@size = 12px
-@size-large = @size * 2
+size = 12px
+size-large = size * 2
 
-pad(@x, @y = @size)
-  margin @size-large
-  padding @y @x @y @x
+pad(x, y = size)
+  margin size-large
+  padding y x y x
 
 body
-  @size = 50px
+  size = 50px
   pad(5px)
-  font-size @size
+  font-size size
 
 form input
-  border @size / 4 solid black
+  border size / 4 solid black
   pad(1px, 1px)
