--- a/test/integration/tests/bifs.type.in
+++ b/test/integration/tests/bifs.type.in
@@ -1,6 +1,10 @@
 body
+  size = 15px
   background type('test')
   background type(12px)
   background type(12)
   background type(hsl(100deg, 50%, 50%))
   background type(#fff)
+  background type(something)
+  background type(size)
+  background type(type)
