Added failing nested compilation test

--- a/test/integration/tests/selectors.nested.in
+++ b/test/integration/tests/selectors.nested.in
@@ -3,9 +3,16 @@ form
   .foo
     color black
     .bar
+      padding 5px
       color red
 
 body
   .foo
     .bar
       display none
+
+.foo
+.bar
+  .baz
+    .raz
+      something 'else'
