Changed test slightly

--- a/test/integration/tests/mixins.nested.in
+++ b/test/integration/tests/mixins.nested.in
@@ -1,12 +1,11 @@
 
 mixin(n)
   padding n
-  bar = 'bar'
+  var = 'bar'
   .foo
-    baz = 'baz'
-    color baz
+    color var
     .bar
-      color baz
+      color var
 
 body
   foo = 'foo'
