more arithmetic tests

--- a/test/integration/tests/arithmetic.in
+++ b/test/integration/tests/arithmetic.in
@@ -17,3 +17,5 @@ h2
   y = 10
   x = 15
   padding (y / 2) ( (1 - (( x )) / ((2))))
+  padding (y / 2) -( (1 - (( x )) / ((2))))
+  padding (y / 2) (-( (1 - (( x )) / ((2)))))
