--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     , "stylus-tutorial": "./bin/stylus-tutorial"
   }
   , "dependencies": {
-    "cssom": ">= 0.2.0"
+      "cssom": "0.2.0"
+    , "growl": "1.0.2"
   }
 }
