--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   , "version": "0.9.2"
   , "author": "TJ Holowaychuk <tj@vision-media.ca>"
   , "keywords": ["css", "parser", "style", "stylesheets", "jade", "language"]
+  , "repository": "git://github.com/learnboost/stylus"
   , "main": "./index.js"
   , "engines": { "node": ">= 0.2.4" }
   , "bin": {
