--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {   "name": "stylus"
-  , "description": "Robust, expressive language which compiles to CSS"
-  , "version": "0.11.4"
+  , "description": "Robust, expressive, and feature-rich CSS superset"
+  , "version": "0.11.5"
   , "author": "TJ Holowaychuk <tj@vision-media.ca>"
   , "keywords": ["css", "parser", "style", "stylesheets", "jade", "language"]
   , "repository": "git://github.com/learnboost/stylus"
