--- a/package.json
+++ b/package.json
@@ -1,16 +1,53 @@
 {   "name": "stylus"
-  , "description": "Robust, expressive, and feature-rich CSS superset"
-  , "version": "0.16.0"
-  , "author": "TJ Holowaychuk <tj@vision-media.ca>"
-  , "keywords": ["css", "parser", "style", "stylesheets", "jade", "language"]
-  , "repository": "git://github.com/learnboost/stylus"
-  , "main": "./index.js"
-  , "engines": { "node": ">= 0.2.4" }
-  , "bin": { "stylus": "./bin/stylus" }
-  , "scripts" : { "prepublish" : "npm prune" }
-  , "dependencies": {
-      "cssom": "0.2.0"
-    , "growl": "1.1.0"
-    , "mkdirp": "0.0.7"
-  }
+  , "scripts": [
+      "lib/colors.js"
+    , "lib/errors.js"
+    , "lib/functions/index.js"
+    , "lib/lexer.js"
+    , "lib/nodes/arguments.js"
+    , "lib/nodes/binop.js"
+    , "lib/nodes/block.js"
+    , "lib/nodes/boolean.js"
+    , "lib/nodes/call.js"
+    , "lib/nodes/charset.js"
+    , "lib/nodes/comment.js"
+    , "lib/nodes/each.js"
+    , "lib/nodes/expression.js"
+    , "lib/nodes/fontface.js"
+    , "lib/nodes/function.js"
+    , "lib/nodes/group.js"
+    , "lib/nodes/hsla.js"
+    , "lib/nodes/ident.js"
+    , "lib/nodes/if.js"
+    , "lib/nodes/import.js"
+    , "lib/nodes/index.js"
+    , "lib/nodes/jsliteral.js"
+    , "lib/nodes/keyframes.js"
+    , "lib/nodes/literal.js"
+    , "lib/nodes/media.js"
+    , "lib/nodes/node.js"
+    , "lib/nodes/null.js"
+    , "lib/nodes/page.js"
+    , "lib/nodes/params.js"
+    , "lib/nodes/property.js"
+    , "lib/nodes/return.js"
+    , "lib/nodes/rgba.js"
+    , "lib/nodes/root.js"
+    , "lib/nodes/selector.js"
+    , "lib/nodes/string.js"
+    , "lib/nodes/ternary.js"
+    , "lib/nodes/unaryop.js"
+    , "lib/nodes/unit.js"
+    , "lib/parser.js"
+    , "lib/renderer.js"
+    , "lib/stack/index.js"
+    , "lib/stack/frame.js"
+    , "lib/stack/scope.js"
+    , "lib/stylua.js"
+    , "lib/token.js"
+    , "lib/utils.js"
+    , "lib/visitor/index.js"
+    , "lib/visitor/compiler.js"
+    , "lib/visitor/evaluator.js"
+  ]
 }
