added path to package.json

--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {   "name": "stylus"
   , "scripts": [
-      "lib/colors.js"
+      "lib/path.js"
+    , "lib/colors.js"
     , "lib/errors.js"
     , "lib/functions/index.js"
     , "lib/lexer.js"
