--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     , "lib/colors.js"
     , "lib/errors.js"
     , "lib/functions/index.js"
+    , "lib/functions/image.js"
     , "lib/lexer.js"
     , "lib/nodes/arguments.js"
     , "lib/nodes/binop.js"
