Fix .npmignore to actually be useful
npm has a bug where it fails to ignore directories if they don't have the
trailing slash. Also add Readme, History, Makefile and other misc files to
.npmignore.

--- a/.npmignore
+++ b/.npmignore
@@ -1,6 +1,13 @@
-test
-support
-testing
-docs
-examples
-node_modules
+.npmignore
+.gitignore
+.gitmodules
+.travis.yml
+
+History.md
+Makefile
+Readme.md
+
+docs/
+editors/
+examples/
+test/
