--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   , "bin": { "stylus": "./bin/stylus" }
   , "scripts" : { "prepublish" : "npm prune", "test": "make test" }
   , "dependencies": {
-      "cssom": "0.2.2"
+      "cssom": "0.2.x"
     , "growl": "1.4.x"
     , "mkdirp": "0.3.x"
     , "debug": "*"
