--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   , "version": "0.32.1"
   , "author": "TJ Holowaychuk <tj@vision-media.ca>"
   , "keywords": ["css", "parser", "style", "stylesheets", "jade", "language"]
-  , "repository": "git://github.com/learnboost/stylus"
+  , "repository": "git://github.com/LearnBoost/stylus"
   , "main": "./index.js"
   , "browserify": "./lib/browserify.js"
   , "engines": { "node": "*" }
