--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "stylus",
   "description": "Robust, expressive, and feature-rich CSS superset",
-  "version": "0.42.2",
+  "version": "0.43.0",
   "author": "TJ Holowaychuk <tj@vision-media.ca>",
   "keywords": [
     "css",
@@ -29,6 +29,7 @@
     "mkdirp": "0.3.x",
     "debug": "*",
     "sax": "0.5.x",
+    "source-map": "~0.1.29",
     "glob": "3.2.x"
   },
   "devDependencies": {
