--- a/package.json
+++ b/package.json
@@ -1,22 +1,37 @@
-{   "name": "stylus"
-  , "description": "Robust, expressive, and feature-rich CSS superset"
-  , "version": "0.38.0"
-  , "author": "TJ Holowaychuk <tj@vision-media.ca>"
-  , "keywords": ["css", "parser", "style", "stylesheets", "jade", "language"]
-  , "repository": "git://github.com/LearnBoost/stylus"
-  , "main": "./index.js"
-  , "browserify": "./lib/browserify.js"
-  , "engines": { "node": "*" }
-  , "bin": { "stylus": "./bin/stylus" }
-  , "scripts" : { "prepublish" : "npm prune", "test": "make test" }
-  , "dependencies": {
-      "cssom": "0.2.x"
-    , "mkdirp": "0.3.x"
-    , "debug": "*"
-    , "sax": "0.5.x"
-  }
-  , "devDependencies": {
-      "should": "*"
-    , "mocha": "*"
+{
+  "name": "stylus",
+  "description": "Robust, expressive, and feature-rich CSS superset",
+  "version": "0.39.0",
+  "author": "TJ Holowaychuk <tj@vision-media.ca>",
+  "keywords": [
+    "css",
+    "parser",
+    "style",
+    "stylesheets",
+    "jade",
+    "language"
+  ],
+  "repository": "git://github.com/LearnBoost/stylus",
+  "main": "./index.js",
+  "browserify": "./lib/browserify.js",
+  "engines": {
+    "node": "*"
+  },
+  "bin": {
+    "stylus": "./bin/stylus"
+  },
+  "scripts": {
+    "prepublish": "npm prune",
+    "test": "make test"
+  },
+  "dependencies": {
+    "cssom": "0.2.x",
+    "mkdirp": "0.3.x",
+    "debug": "*",
+    "sax": "0.5.x"
+  },
+  "devDependencies": {
+    "should": "*",
+    "mocha": "*"
   }
 }
