First take on the engine

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "_includes/tenkan"]
 	path = _includes/tenkan
 	url = git://github.com/kizu/tenkan.git
+[submodule "docs"]
+	path = docs
+	url = https://github.com/kizu/new-stylus-docs.git
