--- a/.gitmodules
+++ b/.gitmodules
@@ -3,4 +3,4 @@
 	url = git://github.com/kizu/tenkan.git
 [submodule "docs"]
 	path = docs
-	url = https://github.com/kizu/new-stylus-docs.git
+	url = https://github.com/LearnBoost/stylus.git
