Performance tuning and basic caching support.

--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "mkdirp": "0.3.x",
     "debug": "*",
     "sax": "0.5.x",
-    "glob": "3.2.x"
+    "glob": "3.2.x",
+    "circular-json": "0.1.x"
   },
   "devDependencies": {
     "should": "*",
