Fix mixed content rendering issues
If accessing the gh-pages url with an HTTPS connection, stylesheets and
scripts will not load due to mixed content issues [1].

A solution to this is to have a protocol agnostic URL [2]. I’ve updated
the production_url variables to be protocol agnostic URLs.

[1]:https://support.mozilla.org/en-US/kb/how-does-content-isnt-secure-af
fect-my-safety
[2]:http://www.paulirish.com/2010/the-protocol-relative-url/

--- a/_config.yml
+++ b/_config.yml
@@ -11,7 +11,7 @@ exclude: ['bin', 'examples', 'lib', 'test', 'bm.js', 'index.js', 'Makefile', 'Ge
 # github_user: kizu
 
 ## Production URL (if different from default GitHub Pages one)
-production_url: http://learnboost.github.io/stylus
+production_url: //learnboost.github.io/stylus
 
 ## Comment out if (in absence of above fields) you'd like to use absolute `/` links
 relative_urls_when_possible: true
