Move test runner out of make
* Make does not come on windows (by default)
* We were doing nothing special with the make file for the tests
* Putting the mocha command inside of npm test is SUPER portable
* Attaching tools like node-debug while running the tests is now as simple as node-debug npm test

--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
   },
   "scripts": {
     "prepublish": "npm prune",
-    "test": "make test"
+    "test": "mocha test/ test/middleware/ --require should --bail --reporter dot",
+    "test-cov": "mocha test/ test/middleware/ --require should --bail --reporter html-cov > coverage.html"
   },
   "dependencies": {
     "css-parse": "1.7.x",
