--- a/package.json
+++ b/package.json
@@ -33,7 +33,8 @@
     "mkdirp": "0.3.x",
     "debug": "*",
     "sax": "0.5.x",
-    "glob": "3.2.x"
+    "glob": "3.2.x",
+    "source-map": "0.1.x"
   },
   "devDependencies": {
     "should": "2.x",
