--- a/package.json
+++ b/package.json
@@ -36,9 +36,9 @@
     "glob": "3.2.x"
   },
   "devDependencies": {
-    "should": "2.x",
+    "jscoverage": "0.3.8",
     "mocha": "*",
-    "jscoverage": "0.3.8"
+    "should": "4.x"
   },
   "bugs": {
     "url": "https://github.com/LearnBoost/stylus/issues"
