Added source maps to the menu

--- a/_config.yml
+++ b/_config.yml
@@ -46,6 +46,7 @@ menu:
     - docs/middleware.html
     - docs/introspection.html
     - docs/js.html
+    - docs/sourcemaps.html
 
 link_handles:
     - prefix: "@"
