submodule protocol fix

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,6 @@
 [submodule "_includes/tenkan"]
 	path = _includes/tenkan
-	url = git://github.com/kizu/tenkan.git
+	url = https://github.com/kizu/tenkan.git
 [submodule "docs"]
 	path = docs
 	url = https://github.com/LearnBoost/stylus.git
